@@ -46,8 +46,12 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.11.0</version>
                 <configuration>
-                    <source>${java.version}</source>
-                    <target>${java.version}</target>
+                    <release>21</release>
+                    <fork>true</fork>
+                    <compilerArgs>
+                        <arg>--enable-preview</arg>
+                    </compilerArgs>
+                    <executable>/usr/lib/jvm/java-21-openjdk-amd64/bin/javac</executable>
                 </configuration>
             </plugin>
             <plugin>
